# findcrack

./: .gitignore  README.md  demo.py  main.py  pyproject.toml
.github/workflows/: release.yml
demo/: demo.py  generator.py  runner.py
demo/notebooks/: main.ipynb
notebooks/: Seg_TEMPLATE_Semantic_Segmentation_Models_(SMP).ipynb
src/findcrack/: __init__.py  _version.py  metrics.py  patching.py  pipeline.py  preprocess.py  tta.py  utils.py
src/findcrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/findcrack/config/: registry.yml
src/findcrack/evaluation/: __init__.py  metrics.py
src/findcrack/inference/: __init__.py  pipeline.py  tta.py
src/findcrack/models/: __init__.py  deepcrack.py  onnx_wrapper.py  registry.json  registry.py  smp.py  unet.py  version.json  zoo.py
src/findcrack/postprocess/: __init__.py  blending.py
src/findcrack/preprocess/: __init__.py  __main__.py  clahe.py  patching.py  preprocessor.py  transforms.py
tests/: test_evaluation.py  test_postprocess.py  test_preprocess.py  test_registry.py  test_torchless.py
