[project]
name = "findcrack"
version = "0.1.7"
description = "A deep learning crack detection package supporting U-Net and DeepCrack models with PyTorch and ONNX backends."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "StrikerEurika" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "albumentations>=1.3.0,<2.0.0",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.8.0",
    "pillow>=9.5.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
standard = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.0",
]
torch = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/StrikerEurika/findcrack"
Repository = "https://github.com/StrikerEurika/findcrack"
Releases = "https://github.com/StrikerEurika/findcrack/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
findcrack = ["**/*.yml", "**/*.yaml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "findcrack[standard]",
    "pytest>=7.0.0",
]

[tool.uv.sources]
findcrack = { workspace = true, editable = true }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
